--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@popperjs/core": "^2.11.7",
     "@supabase/supabase-js": "^2.12.1",
+    "base64-arraybuffer": "^1.0.2",
     "bootstrap": "^5.2.3",
     "circular-json": "^0.5.9",
     "core-js": "^3.8.3",
