--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "overlayscrollbars-vue": "^0.5.1",
     "select2-bootstrap-5-theme": "^1.3.0",
     "util": "^0.12.5",
+    "uuid": "^9.0.0",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6",
     "vuex-persistedstate": "^4.1.0"
