--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,2 @@
-VUE_APP_MAIN_URL='http://schillerando.de'
-VUE_APP_BUSINESS_URL='http://business.schillerando.de'
+VUE_APP_MAIN_URL='https://schillerando.de'
+VUE_APP_BUSINESS_URL='https://business.schillerando.de'
