--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "chart.js": "^4.3.2",
     "circular-json": "^0.5.9",
     "core-js": "^3.8.3",
+    "fs": "^0.0.1-security",
     "jquery": "^3.6.4",
     "json-stringify-safe": "^5.0.1",
     "overlayscrollbars": "^2.1.1",
@@ -35,7 +36,8 @@
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^8.0.3",
+    "raw-loader": "^4.0.2"
   },
   "eslintConfig": {
     "root": true,
