--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "fs": "^0.0.1-security",
     "jquery": "^3.6.4",
     "json-stringify-safe": "^5.0.1",
+    "leaflet": "^1.9.4",
     "overlayscrollbars": "^2.1.1",
     "overlayscrollbars-vue": "^0.5.1",
     "select2-bootstrap-5-theme": "^1.3.0",
