--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Schillerando Intern",
   "short_name": "Intern",
-  "start_url": "./unternehmen",
+  "start_url": "./companies",
   "display": "standalone",
   "background_color": "#fff",
   "description": "Interne Verwaltung von Schillerando.",
